# bids_pipeline

./: .env.local.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  _reconcile_saks_v2.py.tmp.32548.1774139822568  determisitic_discussion.txt  pipeline_overhaul.txt  pyproject.toml  requirements.txt
.claude/worktrees/pipeline-consolidation/: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  pytest.ini  requirements.txt
.claude/worktrees/pipeline-consolidation/.codex/skills/: README.md
.claude/worktrees/pipeline-consolidation/diagnosis/: README.md
.claude/worktrees/pipeline-consolidation/docs/: CollectionInstructions_Alex_2026.qmd  HOME_COMPUTER_SETUP.md  design.md
.claude/worktrees/pipeline-consolidation/docs/plans/: 2026-03-16-pipeline-design-v3.md  2026-03-16-prompt-engineering-spec.md  2026-03-20-alex-alignment-pipeline-fixes.md  2026-03-20-benchmark-separation-design.md  (+4 more)
.claude/worktrees/pipeline-consolidation/example/: README.md  deal_details.xlsx
.claude/worktrees/pipeline-consolidation/skill_pipeline/: __init__.py  canonicalize.py  check.py  cli.py  config.py  coverage.py  deal_agent.py  enrich_core.py  extract_artifacts.py  llm.py  materialize.py  models.py  paths.py  provenance.py  seeds.py  verify.py
.claude/worktrees/pipeline-consolidation/tests/: test_benchmark_separation_policy.py  test_skill_check.py  test_skill_coverage.py  test_skill_enrich_core.py  test_skill_llm.py  test_skill_materialize.py  test_skill_pipeline.py  test_skill_preprocess_source.py  test_skill_provenance.py  test_skill_raw_stage.py  test_skill_verify.py
(+1590 files in other folders)
